refactor: upgrade hive-exec to hive3 to support jdk17